# python-intermediate-inflammation-m623

./: .gitignore  README.md  inflammation-analysis.py  numpy_testing1.ipynb  numpy_testing2.ipynb  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml
inflammation/: book.py  inflammation-analysis.py  models.py  views.py
tests/: test_models.py  test_patient.py
